V3/Aira_V3_Ansible/ansible-eks-deploy/k8s-manifests/argocd-service.yml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
spec:
  selector:
    app.kubernetes.io/name: argocd-server
    # app: argocd-server # 실제 Pod 레이블과 일치하지 않습니다.
  type: LoadBalancer
    # LoadBalancer 타입으로 변경
    # NodePort  # ✅ NodePort 방식으로 직접 접근 가능하게 설정
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080  # ✅ 직접 노드에서 접근 가능하도록 포트 지정
