V3/Aira_V3_Ansible/ansible-eks-deploy/k8s-manifests/grafana-service.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: monitoring
spec:
  type: ClusterIP  # 내부에서만 접근 가능
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 3000  # Grafana 기본 포트
      targetPort: 3000
