V3/Aira_V3_Ansible/ansible-eks-deploy/k8s-manifests/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: database
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
