V3/Aira_V3_Ansible/ansible-eks-deploy/k8s-manifests/prometheus-service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: monitoring
spec:
  type: ClusterIP  # 내부에서만 접근 가능
  selector:
    app: prometheus
  ports:
    - protocol: TCP
      port: 9090  # Prometheus 기본 포트
      targetPort: 9090
