V3/Aira_V3_Ansible/ansible-eks-deploy/k8s-manifests/grafana-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: grafana.kopmorning.com  # ⭐ Route 53 또는 ALB에서 설정한 도메인 또는 서브도메인
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
  tls:
    - hosts:
        - grafana.yourdomain.com  # ⭐ 도메인과 일치해야 함
      secretName: grafana-tls-secret
